[200~ПЕРЕХОД МЕЖДУ СТРАНИЦАМИ

--- a/views/layout/page.ejs
+++ b/views/layout/page.ejs
@@ -15,13 +15,14 @@
                     <a class="nav-link" href="/">Главная</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="">Нюша</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="">Крош</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="">Пин</a>
+                    <a class="nav-link" href="/Nusha">Нюша</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="/Krosh">Крош</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="/Pin">Пин</a>
+                    </li>
                 </li>
             </ul>
             <ul class="navbar-nav navbar-right">
