--- a/views/layout/page.ejs
+++ b/views/layout/page.ejs
@@ -15,13 +15,13 @@
                     <a class="nav-link" href="/">Главная</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/fauna/Nusha">Нюша</a>
+                    <a class="nav-link" href="/Nusha">Нюша</a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="/fauna/Krosh">Крош</a>
+                    <a class="nav-link" href="/Krosh">Крош</a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="/fauna/Pin">Пин</a>
+                    <a class="nav-link" href="/Pin">Пин</a>
                     </li>
                 </li>
             </ul>
