--- a/views/layout/page.ejs
+++ b/views/layout/page.ejs
@@ -1,37 +1,39 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        type="text/css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js"></script>
+
 </head>
+
 <body>
-    <nav class="navbar navbar-expand-sm bg-light navbar-light">
-        <div class="container-fluid">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="/">Главная</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/Nusha">Нюша</a>
-                    </li>
-                    <li class="nav-item">
-                    <a class="nav-link" href="/Krosh">Крош</a>
-                    </li>
-                    <li class="nav-item">
-                    <a class="nav-link" href="/Pin">Пин</a>
-                    </li>
-                </li>
-            </ul>
-            <ul class="navbar-nav navbar-right">
-                <li>
-                    <a class="nav-link" href="">Войти</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-    <%- body %>
+
+            <nav class="navbar navbar-expand-sm bg-light navbar-light">
+                <div class="container-fluid">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="/">Главная</a>
+                        </li>
+                        <% menu.forEach(function(fauna){ %>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/faunas/<%=fauna.nick%>"><%=fauna.title%>
+                                </a>
+                            </li>
+                            <% }) %>
+                    </ul>
+                    <ul ckass="navbar-nav navbar-right">
+                        <li>
+                            <a class="nav-link" href="/logreg">Войти</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+
+            <%- body %>
 </body>
+
 </html>
