--- a/views/layout/page.ejs
+++ b/views/layout/page.ejs
@@ -12,26 +12,28 @@
 
 <body>
 
-            <nav class="navbar navbar-expand-sm bg-light navbar-light">
-                <div class="container-fluid">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" href="/">Главная</a>
-                        </li>
-                        <% if(typeof nav=='object' && nav){ nav.forEach(function(smeshariki){ %>
-                            <li class="nav-item">
-                                <a class="nav-link" href="/smeshariki/<%=smeshariki.nick%>"><%=smeshariki.title%></a>
+    <nav class="navbar navbar-expand-sm bg-light navbar-light">
+        <div class="container-fluid">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="/">Главная</a>
+                </li>
+                <% if(typeof nav=='object' && nav){ nav.forEach(function(smeshariki){ %>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/smeshariki/<%=smeshariki.nick%>">
+                            <%=smeshariki.title%>
+                        </a>
+                    </li>
+                    <% })} %>
+                        <ul class="nav navbar-nav navbar-right">
+                            <li>
+                                <a class="nav-link" href="/logreg">Войти</a>
                             </li>
-                            <% })} %>
-                    </ul>
-                    <ul ckass="navbar-nav navbar-right">
-                        <li>
-                            <a class="nav-link" href="/logreg">Войти</a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-            <%- body %>
+                        </ul>
+            </ul>
+        </div>
+    </nav>
+    <%- body %>
 </body>
 
 </html>
