ГЛОБАЛЬНАЯ ПЕРЕМЕННАЯ USER+ЛОГИКА ПОЛЬЗОВАТЕЛЯ ИСПРАВЛЕНА ОШИБКА

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,4 +4,10 @@
 <p>Welcome to <%= title %></p>
 <p>Счетчик: <%= counter %></p>
 
+<% if(user) {%>
+    // Случай залогиненного пользователя
+<% }else{ %>
+    // Случай не залогиненного пользователя
+<% } %>
+
 
