--- a/views/layout/page.ejs
+++ b/views/layout/page.ejs
@@ -26,10 +26,17 @@
                     </li>
                     <% })} %>
                         <ul class="nav navbar-nav navbar-right">
-                            <li>
-                                <a class="nav-link" href="/logreg">Войти</a>
-                            </li>
+                            <%if(user){%>
+                                <form action="/logout" method="post">
+                                    <li><button type="submit" class="btn btn-link">Выйти
+                                        </button></li>
+                                </form>
+                                <% } else { %>
+                                    <li><a href="/logreg">Войти</a></li>
+                                    <% } %>
                         </ul>
+                        </li>
+            </ul>
             </ul>
         </div>
     </nav>
